--- a/BlazorApp1/Layout/NavMenu.razor
+++ b/BlazorApp1/Layout/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="testapi">
+                <span class="" aria-hidden="true"></span>Test
+            </NavLink>
+        </div>
     </nav>
 </div>
 
