--- a/BlazorApp1/Pages/Services.razor
+++ b/BlazorApp1/Pages/Services.razor
@@ -5,41 +5,44 @@
 <h3>Services</h3>
 
 <h1>Hello Radzen!</h1>
-@if (response == null || response.Any())
+@if (response == null || !response.Any())
 {
     <p>Loading...</p>
 }
 else
 {
-    <RadzenDataGrid TItem="Service" Data="@response" AllowFiltering="true" FilterMode="FilterMode.Advanced" EmptyText="No existe datos"
+    <RadzenDataGrid Style="padding-bottom:200px" TItem="Service" Data="@response" AllowFiltering="true" FilterMode="FilterMode.Simple" EmptyText="No existe datos"
     GridLines="DataGridGridLines.Horizontal" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive">
         <Columns>
-            <RadzenDataGridColumn TItem="Service" Property="ServiceId" Title="ServiceId"></RadzenDataGridColumn>
+            <RadzenDataGridColumn Width="100px" TItem="Service" Property="ServiceId" Title="ServiceId"></RadzenDataGridColumn>
             <RadzenDataGridColumn TItem="Service" Property="ServiceName" Title="ServiceName"></RadzenDataGridColumn>
             <RadzenDataGridColumn TItem="Service" Property="Description" Title="Description"></RadzenDataGridColumn>
             <RadzenDataGridColumn TItem="Service" Property="Price" Title="Price" FormatString="{0:C}"></RadzenDataGridColumn>
-            <RadzenDataGridColumn TItem="Service" Title="Delete">
-                <Template Context="servicio">
-                    <RadzenButton Icon="delete" ButtonStyle="ButtonStyle.Danger" Variant="Variant.Flat" Size="ButtonSize.Medium"
-                    Shade="Shade.Lighter" class="rz-my-1 rz-ms-1" Click="@(args => DeleteServicio(servicio.ServiceId))"
-                    @onclick:stopPropagation="true" />
-                </Template>
-            </RadzenDataGridColumn>
-            <RadzenDataGridColumn TItem="Service" Title="Edit">
-                <Template Context="servicio">
-                    <RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Secondary" Variant="Variant.Flat" Size="ButtonSize.Medium"
-                    Shade="Shade.Lighter" class="rz-my-1 rz-ms-1" Click="@(args => UpdateService(servicio.ServiceId))"
-                    @onclick:stopPropagation="true" />
-                </Template>
-            </RadzenDataGridColumn>
+            <RadzenStack>
+                <RadzenDataGridColumn Width="100px" TItem="Service" Title="Delete">
+                    <Template Context="servicio">
+                        <RadzenButton  Icon="delete" ButtonStyle="ButtonStyle.Danger" Variant="Variant.Flat" Size="ButtonSize.Medium"
+                                      Shade="Shade.Lighter" class="rz-my-1 rz-ms-1" Click="@(args => DeleteServicio(servicio.ServiceId))"
+                                      @onclick:stopPropagation="true" />
+                    </Template>
+                </RadzenDataGridColumn>
+                <RadzenDataGridColumn  Width="100px" TItem="Service" Title="Edit">
+                    <Template Context="servicio">
+                        <RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Secondary" Variant="Variant.Flat" Size="ButtonSize.Medium"
+                                      Shade="Shade.Lighter" class="rz-my-1 rz-ms-1" Click="@(args => UpdateService(servicio.ServiceId))"
+                                      @onclick:stopPropagation="true" />
+                    </Template>
+                </RadzenDataGridColumn>
+            </RadzenStack>
+
         </Columns>
     </RadzenDataGrid>
 
 }
 
-    @code{
+@code{
 
-    public List<Service> response { get; set; }
+    public List<Service> response { get; set; } = new();
     public string messagge { get; set; }
     protected async override Task OnInitializedAsync()
     {
@@ -49,20 +52,22 @@ else
     {
         try
         {
-            var response = await client.GetFromJsonAsync<List<Service>>("api/service") ?? new List<Service>();
+             response = await client.GetFromJsonAsync<List<Service>>("api/service") ?? new List<Service>();
         }
         catch(Exception ex)
         {
             messagge = "Ocurrio un error al intentar recibir el service";
         }
+        StateHasChanged();
 
     }
     public async Task DeleteServicio(long id)
     {
         try
         {
-            var result = await client.DeleteAsync("api/servicio/{id}");
+            var result = await client.DeleteAsync($"api/service/{id}");
             response.RemoveAll(s => s.ServiceId == id);
+            StateHasChanged();
         }
         catch
         {
@@ -70,11 +75,11 @@ else
         }
     }
 
-    public async Task UpdateService(long id)
+    public async Task UpdateService(long idServicio)
     {
         try
         {
-            navigationManager.NavigateTo("/services/{id}");
+            navigationManager.NavigateTo($"/servicesCreacion/{idServicio}");
         }
         catch
         {
