--- a/BlazorApp1/Pages/Services.razor
+++ b/BlazorApp1/Pages/Services.razor
@@ -1,11 +1,11 @@
 ﻿@page "/services"
+@layout MainLayout
 @inject NotificationService notificationService
 @inject HttpClient client
 @inject NavigationManager navigationManager
 @inject Blazored.LocalStorage.ILocalStorageService localStorage
-<h3>Services</h3>
+<h3>Servicios</h3>
 
-<h1>Hello Radzen!</h1>
 @if (response == null || !response.Any())
 {
     <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.Center" Wrap="FlexWrap.Wrap" class="rz-m-12" Gap="2rem">
@@ -13,31 +13,31 @@
         <RadzenProgressBarCircular ShowValue="true" Mode="ProgressBarMode.Indeterminate" Size="ProgressBarCircularSize.Large">
             <Template>Espere..</Template>
         </RadzenProgressBarCircular>
-
     </RadzenStack>
 }
 else
 {
-    <RadzenDataGrid Style="padding-bottom:200px" TItem="Service" Data="@response" AllowFiltering="true" FilterMode="FilterMode.Simple" EmptyText="No existe datos"
+    <RadzenDataGrid  TItem="Service" Data="@response" AllowFiltering="true" FilterMode="FilterMode.Simple" EmptyText="No existe datos"
     GridLines="DataGridGridLines.Horizontal" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive">
         <Columns>
             <RadzenDataGridColumn Width="100px" TItem="Service" Property="ServiceId" Title="ServiceId"></RadzenDataGridColumn>
             <RadzenDataGridColumn TItem="Service" Property="ServiceName" Title="ServiceName"></RadzenDataGridColumn>
             <RadzenDataGridColumn TItem="Service" Property="Description" Title="Description"></RadzenDataGridColumn>
-            <RadzenDataGridColumn TItem="Service" Property="Price" Title="Price" FormatString="{0:C}"></RadzenDataGridColumn>
+            <RadzenDataGridColumn TItem="Service" Property="Price" Title="Price" FormatString="{0:N0}"></RadzenDataGridColumn>
+
             <RadzenStack>
                 <RadzenDataGridColumn Width="100px" TItem="Service" Title="Delete">
                     <Template Context="servicio">
                         <RadzenButton  Icon="delete" ButtonStyle="ButtonStyle.Danger" Variant="Variant.Flat" Size="ButtonSize.Medium"
                         Shade="Shade.Lighter" class="rz-my-1 rz-ms-1" Click="@(args => DeleteServicio(servicio.ServiceId))"
-                        @onclick:stopPropagation="true" />
+                        />
                     </Template>
                 </RadzenDataGridColumn>
                 <RadzenDataGridColumn  Width="100px" TItem="Service" Title="Edit">
                     <Template Context="servicio">
                         <RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Secondary" Variant="Variant.Flat" Size="ButtonSize.Medium"
                         Shade="Shade.Lighter" class="rz-my-1 rz-ms-1" Click="@(args => UpdateService(servicio.ServiceId))"
-                        @onclick:stopPropagation="true" />
+                        />
                     </Template>
                 </RadzenDataGridColumn>
             </RadzenStack>
@@ -45,27 +45,39 @@ else
         </Columns>
     </RadzenDataGrid>
 
+    <RadzenStack class="pt-2">
+        <RadzenButton Icon="Create" Text="Crear Servicio" ButtonStyle="ButtonStyle.Primary" Variant="Variant.Flat" Size="ButtonSize.Medium"
+                      Shade="Shade.Lighter" class="mb-3 col-md-2" Click="@(args => CreateRedirect())" />
+    </RadzenStack>
+
 }
 
 @code{
-
+    CultureInfo culture = new CultureInfo("en-US");
     public List<Service> response { get; set; } = new();
     public string messagge { get; set; }
+    public string token {get; set; }
+
     protected async override Task OnInitializedAsync()
     {
         await GetServicio();
+    }
+    public async Task CreateRedirect()
+    {
+        navigationManager.NavigateTo($"/servicesCreacion");
     }
     public async Task GetServicio()
     {
         try
         {
-            var token = await localStorage.GetItemAsync<string>("token");
+            token = await localStorage.GetItemAsync<string>("token");
+
             if (!string.IsNullOrEmpty(token))
             {
                 client.DefaultRequestHeaders.Authorization = new System.Net.Http.Headers.AuthenticationHeaderValue("Bearer",token);
                 response = await client.GetFromJsonAsync<List<Service>>("api/service") ?? new List<Service>();
             }
-         
+
         }
         catch(Exception ex)
         {
@@ -78,17 +90,28 @@ else
     {
         try
         {
-            var result = await client.DeleteAsync($"api/service/{id}");
+            token = await localStorage.GetItemAsync<string>("token");
 
-            if (result.IsSuccessStatusCode) // Verifica que la eliminación fue exitosa
+            if (!string.IsNullOrEmpty(token))
             {
-                response.RemoveAll(s => s.ServiceId == id);
-                StateHasChanged();
+                client.DefaultRequestHeaders.Authorization = new System.Net.Http.Headers.AuthenticationHeaderValue("Bearer", token);
+                var result = await client.DeleteAsync($"api/service/{id}");
+
+                if (result.IsSuccessStatusCode) // Verifica que la eliminación fue exitosa
+                {
+                    await GetServicio();
+
+                    MostrarAlertaExito();
+                  
+                }
+                else
+                {
+                    messagge = "No se pudo eliminar el servicio. Intente nuevamente.";
+                }
             }
-            else
-            {
-                messagge = "No se pudo eliminar el servicio. Intente nuevamente.";
-            }
+
+
+
         }
         catch (Exception ex)
         {
@@ -101,12 +124,31 @@ else
     {
         try
         {
-            navigationManager.NavigateTo($"/servicesCreacion/{idServicio}");
+            token = await localStorage.GetItemAsync<string>("token");
+            if (!string.IsNullOrEmpty(token))
+            {
+                client.DefaultRequestHeaders.Authorization = new System.Net.Http.Headers.AuthenticationHeaderValue("Bearer", token);
+                navigationManager.NavigateTo($"/servicesCreacion/{idServicio}");
+            }
+
         }
         catch
         {
             messagge = "Ocurrio un error al intentar redirigir el service";
         }
+    }
+    public void MostrarAlertaExito()
+    {
+        notificationService.Notify(new NotificationMessage
+        {
+            Severity=NotificationSeverity.Success,
+          Summary="Exito",
+          Detail="El elemento ha sido eliminado correctamente.",
+          Duration=5000
+     
+
+
+        });
     }
 
     public  class Service
